versioned_docs/version-2025.2.1/turma/ago/ago2025.mdx
---
slug: /turma/ago2025
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "AGO2025",
  "base": "AGO",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Divisão de Atividades - Grupo A e B ",
          "size": 2,
          "teachers": [
            "Samuel Stephan Milczuk",
            "Fernanda da Silva Ferreira",
            "Octavio Henrique Viana"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
,
{
          "subject": "Divisão de Atividades - Grupo B e A",
          "size": 2,
          "teachers": [
            "Samuel Stephan Milczuk",
            "Fernanda da Silva Ferreira",
            "Octavio Henrique Viana"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
        ,
        {
          "subject": "Educação Física I - 457",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
        ,
        
        {
          "subject": "Zootecnia Geral - 467",
          "size": 2,
          "teachers": [
            "Roberto Haruyoshi Ito"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Artes I - 458",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
        
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura I - 2515",
          "size": 2,
          "teachers": [
            "Pedro Leites Junior"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Matemática I - 462",
          "size": 2,
          "teachers": [
            "Elenice Josefa Kolancko Setti"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }

,
        {
          "subject": "Educação Física I - 457",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
,
        {
          "subject": "Física I - 460",
          "size": 2,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "AGO2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }

,
        {
          "subject": "Língua Estrangeira - Inglês - 456",
          "size": 2,
          "teachers": [
            "Yohana Diel Saheli"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Geografia I - 463",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I - 2515",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Química I - 461",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "AGO2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Agroecologia e Desenvolvimento Rural Sustentável - 2468",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
,
        {
          "subject": "Filosofia I - 464",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
,
        {
          "subject": "Biologia I - 459",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "AGO2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [

        {
          "subject": "Educação Postural e Segurança no Trabalho - 471",
          "size": 1,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
,
        {
          "subject": "Filosofia I - 464",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Sociologia I - 465",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Agricultura Geral - 466",
          "size": 2,
          "teachers": [
            "Elias Franco"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
        ,
        {
          "subject": "Sociologia I - 465",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
        

      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# AGO2025

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
